# hydro-turb-ai-anomaly

./: .dockerignore  .gitattributes  .gitignore  14-05-main.py  Dockerfile  Histórico, Tendencia_ UNIDAD 1 (1).csv  README.md  create_pipeline.py  docker-compose.yml  modelo_mejor_fit.pkl  previous.py  pyproject.toml  report.csv  reporte.csv  reports.csv  requirements.txt  select_best_fit.py  test1.py  thresholds.csv  turbine_pipeline.joblib
.github/workflows/: preprocess_on_data_change.yml  preprocess_on_pipeline_change.yml
api/: app.py
api/routes/: health.py  predictions.py
app/: main.py
configs/: config.py
data_preprocessing/: preprocessing_pipeline.py
main/: compute_probabilities.py  load_pipeline.py  main.py  model.py  plotter.py  predictions.py  predictions14-05.py  show_graphs14-05.py  show_report_table.py  vibration_severity_checker.py  vibration_severity_checker15-05.py
models/predictions/: latest_prediction.json
models/trained/: best_classifier_metadata.json  classifier_gmm.pkl  classifier_linear.pkl  classifier_logistic.pkl  residuals_CSP_v3.pkl
notebooks/: MDI.ipynb  MDIMG_V2.ipynb  finalPlotter.ipynb  pipeline_a_predictor.ipynb
src/models/: anomaly_detector.py  classifier.py  model_validator.py  residuals_model.py  sensor_selector.py  turb_predictor.py  vibration_severity_checker.py
src/preprocessing/: eda_loader.py  pipeline.py
src/visualization/: charts.py  eda_plots.py  plots.py  plotter.py
workflows/: eda.py  generate_reports.py  predict_anomalies.py  preprocess.py  train_classifier.py  train_model.py
(+22 files in other folders)
