[project]
name = "hydro-turb-ai-anomaly"
version = "0.1.0"
description = "Sistema de diagnóstico de turbinas usando ML"
requires-python = ">=3.13"
authors = [
    {name = "David Oliva Patiño", email = "daolivap@eafit.edu.co"}
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
